--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="score">
 
     </div>
+    <div id="wrapper">
     <div id="answer">
       <ul>
 
@@ -18,6 +19,7 @@
       <ul>
 
       </ul>
+    </div>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
